update to latest Lucene GeoPointField type